spec/e2e/operator/add_string_nil.lit
"s" + nil; # error: [line 1] Runtime error: Undefined operator + for String and Nil.
